--- a/Clairvoyance/backend/requirements.txt
+++ b/Clairvoyance/backend/requirements.txt
@@ -1,10 +1,9 @@
-﻿fastapi==0.115.14
+fastapi==0.115.14
 python-dotenv==1.1.1
 python-multipart==0.0.20
 uvicorn==0.35.0
 
 transformers==4.41.1
-torch==2.3.0 
 Pillow
 numpy==1.26.4
 
