fix issue #7, updated dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: ./Clairvoyance/backend
     ports:
       - "8000:8000"
+    volumes:
+      - ~/.cache/huggingface:/root/.cache/huggingface
   frontend:
     build: ./Clairvoyance/frontend
     ports:
